<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_sm"
    android:background="@drawable/request_list_item_background">

    <TextView
        android:id="@+id/tv_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginTop="@dimen/spacing_xs"
        android:text="@string/request"
        app:layout_constraintBottom_toTopOf="@id/tv_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginTop="@dimen/spacing_xs"
        android:layout_marginStart="@dimen/spacing_sm"
        app:layout_constraintTop_toBottomOf="@id/tv_request"
        app:layout_constraintBottom_toTopOf="@id/tv_requester"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_requester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requester"
        android:layout_marginTop="@dimen/spacing_xs"
        android:layout_marginStart="@dimen/spacing_sm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_from" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/buttons_guideline"
        app:layout_constraintGuide_percent=".35"/>

    <Button
        android:id="@+id/bt_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xs"
        android:text="@string/accept"
        app:layout_constraintStart_toEndOf="@id/buttons_guideline"
        app:layout_constraintEnd_toStartOf="@id/bt_reject"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_reject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xs"
        android:text="@string/reject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bt_accept"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_ignore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xs"
        android:layout_marginBottom="@dimen/spacing_xs"
        android:text="@string/ignore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttons_guideline"
        app:layout_constraintTop_toBottomOf="@id/bt_accept"/>

</androidx.constraintlayout.widget.ConstraintLayout>